illustration mobile fix, text size fix, spacing fix

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -170,6 +170,9 @@ $txtsize: 16px;
     position: relative;
     overflow: hidden;
     align-items: center;
+    h1{
+        font-size: 32px;
+    }
 }
 
 .stip-demoRequest {
@@ -294,19 +297,19 @@ $txtsize: 16px;
     }
 }
 
-.stip-caringBG{
+.stip-caringBG {
     background: url("../img/caringBG.png") no-repeat;
     background-size: contain;
     background-position-x: left;
 }
 
-.stip-ticketBG{
+.stip-ticketBG {
     background: url("../img/ticketBG.png") no-repeat;
     background-size: contain;
     background-position-x: right;
 }
 
-.stip-redirectBG{
+.stip-redirectBG {
     background: url("../img/redirectBG.png") no-repeat;
     background-size: contain;
     background-position-x: left;
@@ -434,7 +437,7 @@ $txtsize: 16px;
     }
 
     .stip-sectionBody {
-        margin: 100px 0 0 0 !important;
+        margin: 3em 0 0 0 !important;
     }
 
     .stip-heroContainer {
@@ -464,6 +467,19 @@ $txtsize: 16px;
     .stipCaringIconDim {
         height: 80px !important;
         width: 150px !important;
+    }
+
+    .stip-howWork {
+        padding: 2em !important;
+        padding-top: 12em !important;
+
+        h2 {
+            font-size: 1.7em !important;
+        }
+
+        p {
+            font-size: 0.7em !important;
+        }
     }
 
     .stip-emailSection {
@@ -518,6 +534,31 @@ $txtsize: 16px;
             color: $stcolor !important;
         }
     }
+
+    .stip-howWork {
+        padding: 3em;
+        h2 {
+            font-size: 1.7em;
+        }
+
+        p {
+            font-size: 0.7em;
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+    .stip-howWork {
+        padding: 5em;
+
+        h2 {
+            font-size: 2em;
+        }
+
+        p {
+            font-size: 1em;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -559,7 +600,7 @@ $txtsize: 16px;
     }
 
     .stip-sectionBody {
-        margin: 100px 5% 0 5% !important;
+        margin: 3em 5% 0 5% !important;
     }
 
     .stipIconDim {
